Changelog
=========


1.4.4 (unreleased)
------------------

- Drop Plone 4.1 support. [jone]


1.4.3 (2016-12-02)
------------------

- Fix class assertion on DOM-Element.
  [raphael-s]


1.4.2 (2016-10-31)
------------------

- Chameleon support: fix status message class. [jone]


1.4.1 (2015-05-06)
------------------

- Add Finnish translations.
  [petri]


1.4.0 (2014-06-02)
------------------

- Add option to exclude subsites from displaying the status message.
  [jone]

- Brazilian Portuguese and Spanish translations were updated.
  [hvelarde]

- Configlet was migrated to plone.app.registry (closes #13).
  [hvelarde]


1.3.0 (2014-05-14)
------------------

- Brazilian Portuguese and Spanish translations were added.
  [hvelarde]

- Implement uninstall profile.
  [jone]

- Remove no longer used utility.
  [jone]

- Protect statusmessage viewlet with browserlayer.
  The viewlet should not be rendered when the package is not installed.
  [jone]

- Replace old PloneTestCase tests with p.a.testing tests.
  [jone]

- Remove z3c.autoinclude includeDependencies, no longer required.
  [jone]


1.2 (2013-06-21)
----------------

- Use own permission to manage globalstatusmessages.
  [Julian Infanger]

- Drop Plone 4.0 support.
  [jone]


1.1 (2012-05-21)
----------------

- Make Plone 4.1.x compatible.
  [mathias.leimgruber]

- Prepare for public release.
  [mathias.leimgruber]

1.0 (2011-04-12)
----------------
- Fix egg structure / added readme
  [mathias.leimgruber]

- Initial release
  [ttschanz]